5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1594_1802.log
== TEST (2019-04-28 14:24:34) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
*from math import

-- ERROR:
File "XXXX", line 4
    *from math import
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:25:01) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
*from math import

-- ERROR:
File "XXXX", line 4
    *from math import
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:25:10) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import

-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:26:47) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt

-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:01:15) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = (math.sqrt(5*d1)+3.14*d2/3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = (math.sqrt(5*d1)+3.14*d2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:02:08) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = ((5*d1)+3.14*d2/3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = (math.sqrt(5*d1)+3.14*d2/3)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:02:58) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = ((5*d1)+3.14*d2/3)
print(dano)
-- OUTPUT:
11.280000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:03:09) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = ((5*d1)+3.14*d2/3)
print(dano)
-- OUTPUT:
11.280000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:03:25) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = ((5*d1)+3.14*d2/3)
print(dano)
-- OUTPUT:
11.280000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:03:35) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = ((5*d1)+3.14*d2/3)
print(dano)
-- EXECUTION TIME:
0.178814
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
11.280000000000001
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
36.28
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
6.046666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:15:43) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = ((5*d1)+3.14*d2/3)
print(dano)
-- OUTPUT:
11.280000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:52:01) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = ((5*d1)+3.14*d2/3)
print(dano)
-- OUTPUT:
11.280000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 17:02:39) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = ((5*d1)+3.14*d2/3)
print(dano)
-- OUTPUT:
11.280000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 17:03:34) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = sqrt(5*d1)) +3.14*d2/3
print(dano)
-- ERROR:
File "XXXX", line 5
    dano = sqrt(5*d1)) +3.14*d2/3
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 17:03:43) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = sqrt(5*d1) +3.14*d2/3
print(dano)
-- OUTPUT:
8.516067977499791
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 17:04:46) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = sqrt(5*d1) + pi*d2/3
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = sqrt(5*d1) + pi*d2/3
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 17:05:02) 
-- CODE:
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = sqrt(5*d1) + pi*d2/3
print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = sqrt(5*d1) + pi*d2/3
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 17:05:15) 
-- CODE:
from math import*
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = sqrt(5*d1) + pi*d2/3
print(dano)
-- OUTPUT:
8.519253284679376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 17:05:56) 
-- CODE:
from math import*
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = sqrt(5*d1) + pi* int(d2/3)
print(dano)
-- OUTPUT:
8.519253284679376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 17:06:07) 
-- CODE:
from math import*
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = sqrt(5*d1) + pi* int(d2/3)
print(dano)
-- OUTPUT:
8.519253284679376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 17:06:08) 
-- CODE:
from math import*
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = sqrt(5*d1) + pi* int(d2/3)
print(dano)
-- EXECUTION TIME:
0.706952
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
8.519253284679376
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
11.760410882231248
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
2.23606797749979
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:53:03) 
-- CODE:
from math import*
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = sqrt(5*d1) + pi* int(d2/3)
print(dano)
-- OUTPUT:
8.519253284679376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:19:52) 
-- CODE:
from math import*
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = sqrt(int(5*d1)) + pi* int(d2/3)
print(dano)
-- OUTPUT:
8.519253284679376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:20:16) 
-- CODE:
from math import*
vidainicial = int(input(""))
d1 = int(input(""))
d2 = int(input(""))
from math import sqrt
dano = sqrt(int(5*d1)) + pi* int(d2/3)
print(dano)
-- OUTPUT:
8.519253284679376
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
